# flask-blog

./: .gitignore  README.md  docker-compose.yml
blog/: .dockerignore  Dockerfile  entrypoint.sh  lint.sh  pyproject.toml  supervisor.conf  wsgi.py
blog/app/: __init__.py  celery_.py  cli.py  config.py  decorators.py  fields.py  initializers.py  models.py  session.py  types.py  utils.py
blog/app/accounts/: __init__.py  forms.py  oauth.py  tasks.py  views.py
blog/app/admin_panel/: __init__.py  base.py  forms.py  utils.py  views.py
blog/app/errors/: __init__.py  views.py
blog/app/main/: __init__.py  views.py
blog/app/posts/: __init__.py  forms.py  views.py
blog/app/static/css/: base.css
blog/app/static/js/: base.js  time-widget.js  utils.js
blog/app/tags/: __init__.py  forms.py  views.py
blog/app/templates/: _macros.html  base.html
blog/app/templates/accounts/: action-logs.html  backup-codes.html  (+7 more)
blog/app/users/: __init__.py  tasks.py  views.py
blog/migrations/: env.py
blog/migrations/versions/: 15fc7d8b77e4_mailtoken.py  19423810ab21_session.py  2396bda10371_comfortable_from_sa_utils.py  2eda97871c9d_add_indexes_where_needed.py  57243655f842_user.py  6cdbf5756eb8_tag_post_m2m.py  6ecb44c31e88_postcomment.py  92e991128d06_oauth.py  a7977b26dc81_notification.py  b481458a743a_delete_old_constraints.py  da74cd8f617a_oauth_sid_provider_unique.py  f8d7ba9aeba1_postlike.py
blog/tests/: __init__.py  conftest.py  test_accounts.py  test_admin_panel.py  test_main.py  test_models.py  test_posts.py  test_tags.py  test_users.py  test_utils.py  utils.py
(+67 files in other folders)
